--- a/Neural_Network.ipynb
+++ b/Neural_Network.ipynb
@@ -1698,18 +1698,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 331,
    "id": "c7bb7d9f",
    "metadata": {},
    "outputs": [],
    "source": [
     "answer = pd.DataFrame(y_final_pred)\n",
-    "answer.to_csv('week9.csv', index=False, header=False)"
+    "answer.to_csv('./weekly_prediction/week9.csv', index=False, header=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 332,
    "id": "416947f3",
    "metadata": {},
    "outputs": [
@@ -1771,7 +1771,7 @@
        "4  0"
       ]
      },
-     "execution_count": 328,
+     "execution_count": 332,
      "metadata": {},
      "output_type": "execute_result"
     }
